fix capacity background cutoff

--- a/style.css
+++ b/style.css
@@ -174,8 +174,6 @@ button .loader {
     display: flex;
     gap: 12px;
     text-align: left;
-    max-width: 100%;
-    overflow: hidden;
 }
 
 input[type=radio] {
